Fix test suite issues
- Fix ChapterServiceTest.getAllActiveChapters test to mock correct repository method
- Update frontend test to match actual fallback behavior in chapterService
- All backend tests now passing (70/70)
- All frontend tests now passing (18/18)
- Ensure code quality after timeout and JSON serialization fixes